# Image_Background_Remover_Desktop_Application

./: .gitignore  AUTHORS.md  BUILD.md  BUILD_INSTALLER.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLER_COMPLETE.md  INSTALLER_GUIDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_AR.md  README_ARABIC.md  START_HERE.md  UPDATE_LOG.md  USER_GUIDE.md  VERSION.md  bgremover.spec  bgremover_setup.iss  build_all.ps1  build_exe.ps1  build_installer.ps1  build_msi.ps1  build_simple.ps1  check_build_ready.ps1  check_install.py  create_installer.ps1  create_installer_simple.ps1  create_msi.ps1  create_msi_wix.ps1  install_wix.ps1  installer.wxs  pyproject.toml  requirements.txt  run.bat  run.ps1  setup.bat  setup.ps1  setup_manifest.txt  (+3 more)
BGRemover_Installer/: CREDITS.md  README.txt  install.ps1
BGRemover_Installer/_internal/bgremover/app/ui/i18n/: ar.json
BGRemover_Installer/_internal/jsonschema-4.25.1.dist-info/: RECORD
BGRemover_Installer/_internal/numpy-2.2.6.dist-info/: RECORD
bgremover/: __init__.py  cli.py
bgremover/app/: __init__.py  main.py
bgremover/app/core/: __init__.py  batch_worker.py  image_ops.py  logger.py  model_store.py  pipeline.py  presets.py  settings.py
bgremover/app/ui/: __init__.py  i18n_manager.py  main_window.py
bgremover/app/ui/assets/: README.md
bgremover/app/ui/i18n/: ar.json
bgremover/app/widgets/: __init__.py  preview_panel.py  queue_panel.py  settings_panel.py
models/: README.md  checksums.json
samples/: README.md
tests/: test_image_ops.py  test_pipeline.py  test_presets.py
